--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-moving-text": "^0.0.7",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^4.0.2",
     "sweetalert2": "^11.4.37",
